# examples

./: README.md  justfile
nanochat/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  apex.aidl  apex.axdl  apex.yaml  bus copy.yaml  bus.ts  bus.yaml  docker-compose.yaml  go.mod  go.sum  iota.ts  justfile  openapi.yaml  package-lock.json  package.json  resources.yaml
nanochat/cmd/: main.go
nanochat/docker/: docker-compose.all.yml
nanochat/iotas/: README.md
nanochat/iotas/follow/: apex.aidl  apex.axdl  bus.ts  bus.yaml  iota.ts  iota.yaml
nanochat/iotas/jot/: .gitignore  Cargo.toml  apex.aidl  apex.yaml  bus.yaml  go.mod  justfile
nanochat/iotas/like/: apex.axdl  bus.ts  bus.yaml  iota.ts  iota.yaml
nanochat/iotas/message/: apex.aidl  apex.axdl  bus.ts  bus.yaml  iota.ts  iota.yaml
nanochat/iotas/user/: apex.aidl  apex.axdl  bus.ts  bus.yaml  iota.ts  iota.yaml
nanochat/ops/: create_databases.sh  drop_databases.sh
nanochat/pkg/nanochat/: deps.go  export.go  interfaces.go  iota.go  jots.go  msgpack.go  providers.go  services.go  users.go
nanochat/src/: generated.rs
nanochat/src/like/: mod.rs
nanochat/src/message/: mod.rs
nanochat/tests/data/: README  README.md  app.js  users.json
nanochat/ui/: README  apex.yaml  home.html  index.html  index_old.html  justfile  nanochat.yaml  package-lock.json  package.json  scratch.html  single.html  svelte.config.js  tailwind.config.cjs  vite.config.ts
nanochat/ui/css/: style.css
nanochat/ui/js/: bootstrap.min.js  lib.js  (+1 more)
wasm-web-service/greeter/: Cargo.toml  apex.axdl  apex.yaml  iota.yaml  justfile
(+471 files in other folders)
