[package]
name = "jot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmrs-guest = { path = "../../iota/rust/crates/wasmrs-guest" }
serde = { version = "1", default-features = false, features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
env_logger = { version = "0.9.1", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
