[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
wasmrs-guest = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
